--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "setup-python": "github:actions/setup-python#v2"
   },
   "devDependencies": {
-    "@types/node": "^12.0.4",
-    "typescript": "^3.5.1"
+    "@types/node": "^12.12.31",
+    "@types/semver": "^7.1.0",
+    "typescript": "^3.8.3"
   }
 }
